--- a/app/front/alunativoApp/www/index.html
+++ b/app/front/alunativoApp/www/index.html
@@ -8,6 +8,9 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+    <link href="css/init.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -24,7 +27,7 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-assertive">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
