--- a/app/front/alunativoApp/www/index.html
+++ b/app/front/alunativoApp/www/index.html
@@ -11,6 +11,9 @@
     <link href="css/login.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
     <link href="css/init.css" rel="stylesheet">
+    
+    <!-- font -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
