--- a/app/front/alunativoApp/www/index.html
+++ b/app/front/alunativoApp/www/index.html
@@ -11,7 +11,8 @@
     <link href="css/login.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
     <link href="css/init.css" rel="stylesheet">
-    
+    <link href="css/events.css" rel="stylesheet">
+
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
