--- a/app/front/alunativoApp/www/index.html
+++ b/app/front/alunativoApp/www/index.html
@@ -12,6 +12,8 @@
     <link href="css/app.css" rel="stylesheet">
     <link href="css/init.css" rel="stylesheet">
     <link href="css/events.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+
 
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
